--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Mathematics Tuition Sompura Gate, Sarjapura
-logo: /assets/img/logo.png
+logo: /assets/img/Maths Tution sompura gate.jpg
 description: Minimal is a theme for GitHub Pages.
 show_downloads: true
 google_analytics:
